@@ -46,9 +46,6 @@ Output JSON v2
 ----
 notes from 5/2:
 
-Need new pipelines:
-* Pl_String to std::string with semantics like Pl_Buffer
-
 See if I can change all output and error messages issued by the
 library, when context is available, to have a pipeline rather than a
 FILE* or std::ostream. This makes it possible for people to capture
