@@ -1,5 +1,8 @@
 2022-05-03  Jay Berkenbilt  <ejb@ql.org>
 
+        * Add new Pipeline class Pl_String which appends to a std::string&
+        passed to it at construction.
+
         * Add new Pipeline class Pl_OStream, similar to Pl_StdioFile but
         takes a std::ostream instead of a FILE*.
 
